--- a/src/scss/_dimensions.scss
+++ b/src/scss/_dimensions.scss
@@ -6,3 +6,17 @@ $logo_margin_horizon: 8px;
 
 /* フッター */
 $footer_height: 1.5rem;
+
+/* ボックスの共通パラメータ */
+$box_border_size: 1px;
+$box_font_size: 1.2rem;
+
+/* シンプルボックスリスト */
+$simple_box_list_media_min_width: 1400px;
+
+/* シンプルボックス */
+$simple_box_width: 33%;
+$simple_box_min_width: 400px;
+$simple_box_height: auto;
+$simple_box_margin_vertical: 10rem;
+$simple_box_margin_horizontal: 10rem;
