スタイルを変更

--- a/src/scss/_dimensions.scss
+++ b/src/scss/_dimensions.scss
@@ -18,5 +18,6 @@ $simple_box_list_media_min_width: 1400px;
 $simple_box_width: 33%;
 $simple_box_min_width: 400px;
 $simple_box_height: auto;
+$simple_box_min_height: 45vh;
 $simple_box_margin_vertical: 10rem;
 $simple_box_margin_horizontal: 10rem;
